--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -352,8 +352,8 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/img/portfolio/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf"
-                                class="text-blue-500">OPEN PROJECT PDF</a>
+                            <a href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf" class="text-blue-500">OPEN PROJECT
+                                PDF</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
@@ -412,8 +412,7 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/img/portfolio/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf"
-                                class="text-blue-500">OPEN
+                            <a href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf" class="text-blue-500">OPEN
                                 PROJECT PDF</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
@@ -464,7 +463,7 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/img/portfolio/AIML-Assignment-Stock-predictor-chatbot-Nagesh_merva.pdf"
+                            <a href="./src/pdf/AIML-Assignment-Stock-predictor-chatbot-Nagesh_merva.pdf"
                                 class="text-blue-500">OPEN
                                 PROJECT PDF</a>
                         </li>
