--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="relative bg-gray-100 ">
     <!-- Header nav bar -->
-    <header class="fixed left-0 w-full md:w-[300px] h-screen bg-darkBlue hidden md:block ">
+    <header class="fixed z-10 left-0 w-full md:w-[300px] h-screen bg-darkBlue hidden md:block ">
         <div class="flex justify-center">
             <div class="subtle h-60 w-full flex justify-center items-center flex-col ">
                 <div class="h-32 w-32 rounded-full bg-gray-800">
@@ -67,7 +67,7 @@
         </nav>
     </header>
     <!-- dropdown -->
-    <div class="md:hidden fixed  top-4 left-4 rounded-full  bg-sky-600 flex justify-center items-center">
+    <div class="md:hidden z-10 fixed  top-4 left-4 rounded-full  bg-sky-600 flex justify-center items-center">
         <button id="menu-toggle"
             class=" h-12 w-12 rounded-full flex justify-center items-center text-white text-xl focus:outline-none hover:bg-blue-700 transition-colors">
             <i class="bx bx-menu"></i>
@@ -104,7 +104,7 @@
 
 
     <!-- landingpage main section -->
-    <section id="hero" class=" w-full h-screen bg-slate-900 flex justify-center items-center">
+    <section id="hero" class="relative w-full h-screen bg-slate-900 flex justify-center items-center">
         <div class="subtle text-center md:text-left">
             <h1 class="text-white font-sans font-bold text-2xl md:text-7xl whitespace-nowrap">Nagesh Merva</h1>
             <div class="pt-3 inline-block align-top">
@@ -113,6 +113,11 @@
                         class="typed-cursor" aria-hidden="true"></span></p>
             </div>
         </div>
+        <button
+            onclick="window.location.href='mailto:officialnagesh.merva@gmail.com?subject=Internship offer at our company'"
+            class="absolute bottom-8 p-4 border-x-4 rounded-full bg-blue-900 hover:scale-105 hover:border-y-4 transition-transform">
+            <h1 class="text-white font-raleway font-bold"> Available for internships as WEB DEV</h1>
+        </button>
     </section>
     <main>
         <!-- About section -->
