adding app.py for handling contact form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="flex justify-center">
             <div class="subtle h-60 w-full flex justify-center items-center flex-col ">
                 <div class="h-32 w-32 rounded-full bg-gray-800">
-                    <img src="./src/img/profile1.jpg" class="p-2 h-30 w-30 rounded-full" alt="profile">
+                    <img src="./src/img/profilepicture.png" class="p-2 h-30 w-30 rounded-full" alt="profile">
                 </div>
                 <h1 class="pt-2 text-white font-poppins font-bold text-2xl ">Nagesh Merva</h1>
                 <div class="flex pt-4 space-x-2">
@@ -157,7 +157,7 @@
                                     </li>
                                     <li><i class="fas fa-angle-right text-sky-400 "></i>
                                         <strong>Website:</strong>
-                                        <a
+                                        <a target="_blank"
                                             href="https://nagesh-merva.github.io/Nagesh-Portfolio-Website/">https://Nagesh-Portfolio-website/</a>
                                     </li>
                                     <li><i class="fas fa-angle-right text-sky-400 "></i>
@@ -281,9 +281,9 @@
                     class="font-bold font-raleway text-3xl text-slate-700 underline decoration-4 decoration-cyan-500 underline-offset-8">
                     Resume
                 </h1>
-                <button
+                <a href="./src/pdf/Nagesh_Merva_WEB_DEV_Intern.pdf" download="Nagesh_Merva_Web_Dev_Intern.pdf"
                     class="absolute right-4 top-8 pl-4 pr-4 p-2 bg-indigo-700 rounded-xl text-md text-white font-semibold font-sans hover:bg-blue-600 hover:scale-105 transition-colors ease-in-out">Download
-                    Resume</button>
+                    Resume</a>
                 <p class=" pt-8  ">
                     I am committed to cultivating my professional trajectory within the realms of web development,
                     artificial
@@ -552,7 +552,7 @@
                     industry advancements.
                 </p>
                 <div class="pt-10 pr-5 grid-cols-1 grid md:grid-cols-3 gap-y-8">
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/RoboAI-Nagesh_Shyam_Merva.pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-robot text-white text-4xl group-hover:text-sky-500"></span>
@@ -566,20 +566,22 @@
                                 development</p>
                         </div>
                     </a>
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/Nagesh Shyam Merva_RoboAI_COA[252].pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-gear text-white text-4xl group-hover:text-sky-500"></span>
                         </div>
                         <div class="pl-4">
-                            <h1 class="font-raleway font-bold text-xl hover:text-sky-500">ARDUINO Workshop</h1>
-                            <p class="text-md font-thin">Workshop organised by our robotics Club , here we learned about
-                                basic Arduino
-                                Programming and Various sensors . also
-                                developed a bluetooth controlled car as final project</p>
+                            <h1 class="font-raleway font-bold text-xl hover:text-sky-500">Global FIRST Tech Challenge
+                            </h1>
+                            <p class="text-md font-thin">I volunteered for the global Tech event,Global FIRST robotics
+                                festival,Goa. Where i got the chance to meet the teams from different countries like
+                                Khazakistan, japan,Sri lanka etc.I got to experince thier robotic development system and
+                                battle of the bots.had a great opportuinity to network with people from Different
+                                cities. </p>
                         </div>
                     </a>
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/Eduhub_Certificate.pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-box text-white text-4xl group-hover:text-sky-500"></span>
@@ -595,7 +597,7 @@
                                 it sucessfully to the blockchain using There own platform</p>
                         </div>
                     </a>
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/Eduhub_Certificate.pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-globe text-white text-4xl group-hover:text-sky-500"></span>
@@ -610,7 +612,7 @@
                             </p>
                         </div>
                     </a>
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/CODE WARS 2-3.pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-file-earmark-text text-white text-4xl group-hover:text-sky-500"></span>
@@ -624,7 +626,7 @@
                             </p>
                         </div>
                     </a>
-                    <a href="" class="component flex group">
+                    <a href="./src/pdf/automation using python -Coursera.pdf" class="component flex group">
                         <div
                             class="p-3 h-fit w-fit border-2 rounded-full bg-sky-500 flex justify-center items-center group-hover:border-sky-500 group-hover:bg-white transition-colors">
                             <span class="bi bi-calendar4-week text-white text-4xl group-hover:text-sky-500"></span>
@@ -711,14 +713,14 @@
                                         type="text" name="name" id="name" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label class="pb-2 text-lg font-thin font-raleway" for="name">Your Email</label>
+                                    <label class="pb-2 text-lg font-thin font-raleway" for="email">Your Email</label>
                                     <input
                                         class="border-2 border-gray-300 focus:border-sky-500 focus:outline-none px-4 py-2 "
                                         type="email" class="form-control" name="email" id="email" required="">
                                 </div>
                             </div>
                             <div class="flex flex-col pt-4">
-                                <label class="pb-2 text-lg font-thin font-raleway" for="name">Subject</label>
+                                <label class="pb-2 text-lg font-thin font-raleway" for="email">Subject</label>
                                 <input
                                     class="border-2 border-gray-300 focus:border-sky-500 focus:outline-none px-4 py-2 "
                                     type="text" class="form-control" name="subject" id="subject" required="">
@@ -730,9 +732,9 @@
                                     class="form-control" name="message" rows="10" required=""></textarea>
                             </div>
                             <div class="my-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                                <div class="loading hidden">Loading</div>
+                                <div class="error-message hidden"></div>
+                                <div class="sent-message hidden">Your message has been sent. Thank you!</div>
                             </div>
                             <div class="text-center"><button
                                     class=" p-2 pr-4 pl-4 rounded-md bg-sky-500 text-white font-raleway hover:bg-sky-900 hover:scale-105"
