--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -22,7 +22,7 @@
         <div class="flex justify-center">
             <div class="subtle h-60 w-full flex justify-center items-center flex-col ">
                 <div class="h-32 w-32 rounded-full bg-gray-800">
-                    <img src="./src/img/profile1.jpg" class="p-2 h-30 w-30 rounded-full" alt="profile">
+                    <img src="./src/img/profilepicture.png" class="p-2 h-30 w-30 rounded-full" alt="profile">
                 </div>
                 <h1 class="pt-2 text-white font-poppins font-bold text-2xl ">Nagesh Merva</h1>
                 <div class="flex pt-4 space-x-2">
@@ -111,12 +111,14 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="https://www.youtube.com/watch?v=NJTRAVWQiGo" class="text-blue-500">Youtbe
+                            <a target="_blank" href="https://www.youtube.com/watch?v=NJTRAVWQiGo"
+                                class="text-blue-500">Youtbe
                                 presentation</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/orgs/BLIND-DRIVERS-Solutions-Challenge/repositories"
+                            <a target="_blank"
+                                href="https://github.com/orgs/BLIND-DRIVERS-Solutions-Challenge/repositories"
                                 class="text-blue-500">Repository
                             </a>
                         </li>
@@ -172,11 +174,12 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="https://www.crob.shop/" class="text-blue-500">www.crob.shop</a>
+                            <a target="_blank" href="https://www.crob.shop/" class="text-blue-500">www.crob.shop</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/nagesh-merva/CROB" class="text-blue-500">repository
+                            <a target="_blank" href="https://github.com/nagesh-merva/CROB"
+                                class="text-blue-500">repository
                             </a>
                         </li>
                     </ul>
@@ -234,11 +237,13 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="https://cro-b-backend.vercel.app/" class="text-blue-500">CROB.BACKEND</a>
+                            <a target="_blank" href="https://cro-b-backend.vercel.app/"
+                                class="text-blue-500">CROB.BACKEND</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/nagesh-merva/Cro.B_backend" class="text-blue-500">repository
+                            <a target="_blank" href="https://github.com/nagesh-merva/Cro.B_backend"
+                                class="text-blue-500">repository
                             </a>
                         </li>
                     </ul>
@@ -297,11 +302,13 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="https://prathamnaik12.github.io/IT-CAKE-WALA/" class="text-blue-500">ITCAKEWALA</a>
+                            <a target="_blank" href="https://prathamnaik12.github.io/IT-CAKE-WALA/"
+                                class="text-blue-500">ITCAKEWALA</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/prathamnaik12/IT-CAKE-WALA" class="text-blue-500">Repository
+                            <a target="_blank" href="https://github.com/prathamnaik12/IT-CAKE-WALA"
+                                class="text-blue-500">Repository
                             </a>
                         </li>
                     </ul>
@@ -352,12 +359,13 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf" class="text-blue-500">OPEN PROJECT
+                            <a target="_blank" href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf"
+                                class="text-blue-500">OPEN PROJECT
                                 PDF</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/nagesh-merva/Forbie---solidworks-project"
+                            <a target="_blank" href="https://github.com/nagesh-merva/Forbie---solidworks-project"
                                 class="text-blue-500">Repository for Design files
                             </a>
                         </li>
@@ -412,12 +420,13 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf" class="text-blue-500">OPEN
+                            <a target="_blank" href="./src/pdf/INDUSTRIAL DESIGN ASSIGN - FORBIE.pdf"
+                                class="text-blue-500">OPEN
                                 PROJECT PDF</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/nagesh-merva/Forbie---solidworks-project"
+                            <a target="_blank" href="https://github.com/nagesh-merva/Forbie---solidworks-project"
                                 class="text-blue-500">Repository for Design files
                             </a>
                         </li>
@@ -463,13 +472,13 @@
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">URL : </h4>
-                            <a href="./src/pdf/AIML-Assignment-Stock-predictor-chatbot-Nagesh_merva.pdf"
+                            <a target="_blank" href="./src/pdf/AIML-Assignment-Stock-predictor-chatbot-Nagesh_merva.pdf"
                                 class="text-blue-500">OPEN
                                 PROJECT PDF</a>
                         </li>
                         <li class="flex flex-row space-x-2 items-start ">
                             <h4 class="font-sans font-bold text-md ">Github link : </h4>
-                            <a href="https://github.com/nagesh-merva/Stock-Prediction-bot"
+                            <a target="_blank" href="https://github.com/nagesh-merva/Stock-Prediction-bot"
                                 class="text-blue-500">Repository
                             </a>
                         </li>
