--- a/index.html
+++ b/index.html
@@ -703,8 +703,7 @@
                     </div>
 
                     <div class="subtleDiv p-10 bg-white drop-shadow-lg shadow-black ">
-                        <form action="https://nagesh-portfolio-website.vercel.app/contact" method="post" role="form"
-                            class="php-email-form">
+                        <form method="post" role="form" class="">
                             <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0">
                                 <div class="form-group col-md-6">
                                     <label class="pb-2 text-lg font-thin font-raleway" for="name">Your Name</label>
