--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nagesh Portfolio</title>
     <link href="./src/output.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -731,11 +731,17 @@
                                     class="form-control" name="message" rows="10" required=""></textarea>
                             </div>
                             <div class="my-3">
-                                <div class="loading hidden">Loading</div>
+                                <div class="loading flex justify-center space-x-2 hidden">
+                                    <div
+                                        class="h-8 w-8 rounded-full border-4 border-sky-300 border-b-sky-700 animate-spin">
+                                    </div>
+                                    <h1 class="text-xl">Loading</h1>
+                                </div>
                                 <div class="error-message hidden"></div>
-                                <div class="sent-message hidden">Your message has been sent. Thank you!</div>
+                                <div class="sent-message hidden text-center ">Your message has been sent. Thank you!
+                                </div>
                             </div>
-                            <div class="text-center"><button
+                            <div class="text-center"><button id="SubmitBtn"
                                     class=" p-2 pr-4 pl-4 rounded-md bg-sky-500 text-white font-raleway hover:bg-sky-900 hover:scale-105"
                                     type="submit">Send Message</button></div>
                         </form>
