--- a/index.html
+++ b/index.html
@@ -522,9 +522,9 @@
                                     class="pt-2 font-raleway font-bold text-xl text-zinc-900 text-pretty underline decoration-sky-700">
                                     FORBIE - minor project
                                 </h1>
-                                <img src="./src/img/portfolio/Fm-1.png" class="p-4 h-72 md:h-96 w-fit" alt="">
+                                <img src="./src/img/portfolio/FM-1.png" class="p-4 h-72 md:h-96 w-fit" alt="">
                                 <div class=" absolute bottom-0 w-full h-10 portfolio-links flex  space-x-1">
-                                    <a href="./src/img/portfolio/Fm-1.png" data-gallery="portfolioGallery"
+                                    <a href="./src/img/portfolio/FM-1.png" data-gallery="portfolioGallery"
                                         class="portfolio-lightbox flex justify-center items-center w-1/2 p-2 bg-sky-400/70 hover:scale-105 hover:bg-blue-500/80  "><i
                                             class=" bx bx-plus text-white text-2xl"></i></a>
                                     <a href="./portfolio-details.html#forbie" title="More Details"
