--- a/index.html
+++ b/index.html
@@ -693,9 +693,8 @@
                                 </div>
                             </div>
 
-
                             <iframe class="pt-4"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d383854.8650456368!2d74.041192!3d15.4314951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbfa4d78e63e4d1%3A0xd4e21dd3d088f04!2sShree%20Shantadurga%20Temple!5e0!3m2!1sen!2sus!4v1638003170646!5m2!1sen!2sus"
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3846.010789341494!2d74.04221987152218!3d15.429969021595623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTXCsDI1JzQ3LjkiTiA3NMKwMDInMzcuNCJF!5e0!3m2!1sen!2sin!4v1716913033539!5m2!1sen!2sin"
                                 frameborder="0" style="border:0; width: 100%; height: 290px;"
                                 allowfullscreen=""></iframe>
                         </div>
