--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M828PZEGM1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-M828PZEGM1');
+</script>
 
 <body class="relative bg-gray-100 ">
     <!-- Header nav bar -->
