--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="VP_SpGpyP8tRr0v-_3g4Og-4PdPLmlAnoXuPQVnwHXw" />
     <title>Nagesh Portfolio</title>
     <link href="./src/output.css" rel="stylesheet">
     <link
